--- a/style/style.css
+++ b/style/style.css
@@ -6,10 +6,12 @@
 }
 
 @media (max-width: 989px) {
+
   p,
   td {
     font-size: 14px;
   }
+
   h2 {
     font-size: 18px;
   }
@@ -154,11 +156,11 @@ main .popular-movies label input[type="checkbox"] {
   height: 0;
 }
 
-main .popular-movies label input[type="checkbox"]:checked + .slider:before {
+main .popular-movies label input[type="checkbox"]:checked+.slider:before {
   transform: translate(26px);
 }
 
-main .popular-movies label input[type="checkbox"]:checked + .slider {
+main .popular-movies label input[type="checkbox"]:checked+.slider {
   background: red;
 }
 
@@ -507,23 +509,23 @@ main .seats .seat input {
   appearance: none;
 }
 
-main .seats .seat input:disabled + label {
+main .seats .seat input:disabled+label {
   cursor: default;
 }
 
-main .seats .seat input:disabled + label svg path {
+main .seats .seat input:disabled+label svg path {
   fill: gray;
 }
 
-main .seats .seat input:disabled + label .seat-number {
+main .seats .seat input:disabled+label .seat-number {
   color: white;
 }
 
-main .seats .seat input:checked + label svg path {
+main .seats .seat input:checked+label svg path {
   fill: red;
 }
 
-main .seats .seat input:checked + label .seat-number {
+main .seats .seat input:checked+label .seat-number {
   color: white;
 }
 
@@ -696,4 +698,63 @@ main .about iframe {
 
 .movie .movie-content .account-page-data p {
   text-transform: initial;
+}
+
+.projection .container {
+  display: flex;
+  align-items: flex-end;
+  border-radius: 1rem;
+  overflow: hidden;
+  position: relative;
+}
+
+.projection img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  filter: brightness(0.8);
+}
+
+.projection .projection-info {
+  position: absolute;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+  gap: 2rem;
+}
+
+.projection h1 {
+  text-align: left;
+}
+
+.projection .reserve {
+  background-color: #050938;
+  margin: 1rem 0 0;
+}
+
+.projection .trailer {
+  background-color: #44487c;
+}
+
+.projection img{
+  background-color: #44487c;
+}
+
+.actors{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.actor{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.actor-image{
+  max-width: 50px;
+  max-height: 50px;
 }
