--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,11 @@ a {
   color: white;
 }
 
+small {
+  font-size: 10px;
+  color: white;
+}
+
 button {
   outline: none;
   border: none;
@@ -84,16 +89,9 @@ header nav a:last-child {
 
 header nav img {
   border-radius: 25px;
-  width: 130px;
-  height: 130px;
+  width: 100px;
+  height: 100px;
   object-fit: cover;
-}
-
-@media (max-width: 989px) {
-  header nav img {
-    width: 100px;
-    height: 100px;
-  }
 }
 
 header nav svg {
@@ -712,7 +710,7 @@ main .about iframe {
   width: 100%;
   height: 100%;
   display: block;
-  filter: brightness(0.8);
+  filter: brightness(0.7);
 }
 
 .projection .projection-info {
@@ -722,39 +720,147 @@ main .about iframe {
   justify-content: space-between;
   align-items: flex-end;
   width: 100%;
+  height: 100%;
   gap: 2rem;
+}
+
+
+.trailer-overlay button {
+  position: fixed;
+  top: 0;
+  right: 0;
+  font-size: 5rem;
+  transform: rotate(45deg);
+}
+
+.trailer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: black;
+  transition: all 1s ease;
+  overflow: hidden;
+  left: 100%;
+ }
+
+.trailer.active {
+  left: 0;
+}
+
+.trailer iframe {
+  width: 100%;
+  height: 100%;
 }
 
 .projection h1 {
   text-align: left;
 }
 
-.projection .reserve {
+.projection .reserve-button {
   background-color: #050938;
   margin: 1rem 0 0;
 }
 
-.projection .trailer {
+.projection .trailer-button {
   background-color: #44487c;
 }
 
-.projection img{
+.projection img {
   background-color: #44487c;
 }
 
-.actors{
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+.actors {
+  margin-top: 2rem;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  height: 100%;
 }
 
-.actor{
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+@media (max-width: 989px) {
+  .actors {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+
+  .actors h3 {
+    font-size: 16px;
+  }
 }
 
-.actor-image{
-  max-width: 50px;
-  max-height: 50px;
+.actors h2 {
+  grid-column: 1/3;
+  text-transform: uppercase;
+}
+
+.actor {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 0.8rem;
+  overflow: hidden;
+  transition: all 1s ease;
+  position: relative;
+}
+
+.actor::after {
+  content: "";
+  position: absolute;
+  width: 95%;
+  height: 95%;
+  border: 1px solid;
+  border-color: transparent;
+  border-radius: 1rem;
+  transition: all 1s ease;
+}
+
+.actor-image {
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+  transition: all 1s ease;
+}
+
+@media (min-width: 990px) {
+  .actor {
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    aspect-ratio: 1;
+  }
+
+  .actors h2 {
+    grid-column: 1/4;
+  }
+
+  .actor-info {
+    opacity: 0;
+    position: absolute;
+    padding: 1rem;
+    transition: opacity 1s ease;
+    will-change: opacity;
+    width: 100%;
+    height: 100%;
+  }
+
+  .actor-image {
+    position: absolute;
+  }
+
+  .actor:hover .actor-image {
+    scale: 2;
+    transform: translateX(50px);
+    filter: brightness(0.5);
+  }
+
+  .actor:hover .actor-info {
+    opacity: 1;
+  }
+
+  .actor:hover::after {
+    border-color: white;
+  }
 }
