--- a/style/style.css
+++ b/style/style.css
@@ -700,69 +700,53 @@ main .about iframe {
 
 .projection .container {
   display: flex;
-  align-items: flex-end;
   border-radius: 1rem;
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
+  max-height: 100vh;
 }
 
 .projection img {
   width: 100%;
   height: 100%;
   display: block;
-  filter: brightness(0.7);
+  max-width: 200px;
+}
+
+.projection iframe {
+  width: 100%;
+  height: auto;
+  min-width: 50%;
+  transition: min-width 1s ease;
+  will-change: min-width;
+  border: none;
+}
+
+.projection iframe.full-width {
+  min-width: 100%;
 }
 
 .projection .projection-info {
-  position: absolute;
   padding: 1rem;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   width: 100%;
+  min-width: 50%;
   height: 100%;
   gap: 2rem;
+  background-color: #44487c;
 }
 
-.trailer-overlay {
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-}
-
-.trailer-overlay button {
-  position: fixed;
-  top: 0;
-  right: 0;
-  font-size: 5rem;
-  transform: rotate(45deg);
-}
-
-.trailer {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  background-color: black;
-  transition: all 1s ease;
-  overflow: hidden;
-  left: 100%;
-}
-
-.trailer.active {
-  left: 0;
-}
-
-.trailer iframe {
-  width: 100%;
-  height: 100%;
+.projection .movie-description {
+  margin-top: 0.5rem;
+  line-height: 1.5;
 }
 
 .projection h1 {
   text-align: left;
+  margin-bottom: 1rem;
 }
 
 .projection .reserve-button {
@@ -771,7 +755,8 @@ main .about iframe {
 }
 
 .projection .trailer-button {
-  background-color: #44487c;
+  background-color: #fff;
+  color: #000;
 }
 
 .projection img {
