--- a/style/style.css
+++ b/style/style.css
@@ -252,6 +252,7 @@ main .login form button {
   max-width: 250px;
   width: 100%;
   background: #44487c;
+  padding: 1rem;
 }
 
 main .account {
@@ -716,7 +717,9 @@ main .about iframe {
   position: relative;
   overflow: hidden;
 }
-
+.projection .image-wrapper{
+  align-self: center;
+}
 .projection img {
   width: 100%;
   height: auto;
@@ -737,12 +740,18 @@ main .about iframe {
   aspect-ratio: 16/9;
 }
 
+.projection .missing-trailer{
+  align-self: center;
+  text-align: center;
+  width: 100%;
+  padding: 5rem;
+}
+
 .projection .projection-info {
   padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
   width: 50%;
   height: 100%;
   gap: 2rem;
@@ -872,4 +881,11 @@ main .about iframe {
   .actor:hover::after {
     border-color: white;
   }
+}
+
+.user{
+  width: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
